--- a/package.json
+++ b/package.json
@@ -1,17 +1,13 @@
 {
-  "name": "shangus",
+  "name": "chat-app",
   "version": "1.0.0",
+  "description": "Socket.IO 기반 채팅 애플리케이션",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^5.1.0",
-    "socket.io": "^4.8.1"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2"
   }
 }
