--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "nn",
   "version": "1.0.0",
+  "description": "Simple chat app using Express and Socket.io",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -8,5 +9,11 @@
   "dependencies": {
     "express": "^4.18.2",
     "socket.io": "^4.7.2"
-  }
+  },
+  "engines": {
+    "node": ">=18.0.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
